# predictionmarkettradingbot1

./: .gitignore  LICENSE  README.md  config.yaml  event_map.example.yaml  event_map.yaml  pyproject.toml
.github/workflows/: ci.yml
deployment/: arb-agent.service  com.arbagent.orchestrator.plist  install.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HANDOFF.md  README.md  expansion_proposal_template.md  phase-0-mvp.md  phase-1-dual-platform.md  phase-2-risk-reliability.md  phase-2.5-backtest.md  phase-3-paper-to-live.md  phase-4-auto-matching.md  phase-5-expansion.md  phase-6-productization.md  phase3_decision_template.md  runbook.md
scripts/: ab_backtest.py  aftertax_report.py  backtest.py  calibration_report.py  capacity_report.py  census.py  kill_switch_reset.py  reconcile.py  replay.py  review.py  threshold_calc.py  validate_extractor.py
src/: config.py  main.py  provenance.py  reports.py  tax.py
src/alerts/: redact.py  telegram.py
src/backtest/: fill_model.py  metrics.py  runner.py
src/expansion/: feature_flags.py  resolution_convergence.py
src/layer1_data_recording/: kalshi_fetcher.py  parquet_writer.py  polymarket_fetcher.py
src/layer2_data_serving/: live_stream.py  replay_stream.py
src/layer3_strategy/: adverse_selection.py  allocation.py  cross_market.py  intra_market.py  models.py  uncertainty.py
src/layer4_execution/: exchange.py  kalshi_live.py  live.py  paper.py  partial_fill.py  polymarket_live.py  rate_limit.py  (+1 more)
tests/: conftest.py  test_adverse_selection.py  test_alerts.py  test_backtest_fill_model.py  test_backtest_integration.py  test_backtest_metrics.py  test_capital_allocation.py  test_chaos.py  test_config.py  test_cross_market.py  test_detection_math.py  test_event_map.py  test_expansion_phase5.py  test_gates.py  test_kalshi.py  test_live_and_partial_fill.py  test_matching_phase4.py  test_models.py  test_probes.py  test_provenance.py  test_recovery_and_health.py  test_replay_determinism.py  test_resolution.py  test_risk_policy.py  test_round_a.py  test_round_b.py  test_round_c.py  test_state_db_and_paper.py  test_tax.py  test_threshold_calc.py  test_uncertainty.py
(+18 files in other folders)
